Implemented close button

--- a/index.html
+++ b/index.html
@@ -34,23 +34,10 @@
       </div>
     </div>
     <div id="details-container" class="glass">
-      <h2>Luke Skywalker</h2>
-      <table>
-        <tbody>
-          <tr>
-            <td class="label">Height</td>
-            <td>172cm</td>
-          </tr>
-          <tr>
-            <td class="label">Mass</td>
-            <td>77kg</td>
-          </tr>
-        </tbody>
-      </table>
     </div>
   </main>
   <footer class="glass">
-    &copy; 2021 Mark Libby
+    &copy; 2021 by Mark Libby
   </footer>
   <script src="js/app.js"></script>
   <script>app.peopleStart();</script>
