Test commit for CI/CD

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </main>
   <footer class="glass">
-    &copy; 2021 by Mark Libby
+    &copy; 2021 by Mark Libby.
   </footer>
   <script src="js/app.js"></script>
   <script>app.peopleStart();</script>
