Add favicon, hover events for buttons

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     </div>
     <div id="content-container">
       <div id="people-container">
-        <div class="person-card glass">...</div>
-        <div class="person-card glass">...</div>
-        <div class="person-card glass">...</div>
-        <div class="person-card glass">...</div>
-        <div class="person-card glass">...</div>
-        <div class="person-card glass">...</div>
-        <div class="person-card glass">...</div>
-        <div class="person-card glass">...</div>
-        <div class="person-card glass">...</div>
-        <div class="person-card glass">...</div>
+        <div class="person-card glass button">...</div>
+        <div class="person-card glass button">...</div>
+        <div class="person-card glass button">...</div>
+        <div class="person-card glass button">...</div>
+        <div class="person-card glass button">...</div>
+        <div class="person-card glass button">...</div>
+        <div class="person-card glass button">...</div>
+        <div class="person-card glass button">...</div>
+        <div class="person-card glass button">...</div>
+        <div class="person-card glass button">...</div>
       </div>
       <div id="people-nav">
-        <button id="back" class="glass">Back</button>
-        <button id="next" class="glass">Next</button>
+        <button id="back" class="glass button">Back</button>
+        <button id="next" class="glass button">Next</button>
       </div>
     </div>
     <div id="details-container" class="glass">
